--- a/.github/workflows/CI .yml
+++ b/.github/workflows/CI .yml
@@ -1,8 +1,8 @@
 name : Amra Codeigniter 3 Auto Pull Request
 
 on: 
-  pull_request:
-    branches: [ "master" ]
+  push:
+    branches: [ "development" ]
     
 jobs:
   pull-request:
