--- a/.github/workflows/CI .yml
+++ b/.github/workflows/CI .yml
@@ -17,7 +17,7 @@ jobs:
         id: create_pr
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GIT_TOKEN }}
           branch: development
           base: master
           title: 'Auto PR: Merge Development into Master'
